--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dbus-next>=0.2.3",
     "pyyaml>=6.0.2",
 ]
 
