--- a/guardian_daemon/mkdocs.yml
+++ b/guardian_daemon/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Guardian Docs
 nav:
   - Home: index.md
-  - API:
-      - guardian_daemon: reference/guardian_daemon.md
+  # - API:
+  #     - guardian_daemon: reference/guardian_daemon.md
 plugins:
   - search
   - mkdocstrings:
