--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
 	},
 
 	// Installiere System-Abhängigkeiten für dbus-python
-	"postCreateCommand": "apt-get update && apt-get install -y mkdocs mkdocs-material mkdocstrings-python-handlers mkdocstrings"
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y mkdocs mkdocs-material mkdocstrings-python-handlers mkdocstrings"
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
