fixes from lefthook linting

--- a/guardian_hub/pyproject.toml
+++ b/guardian_hub/pyproject.toml
@@ -9,4 +9,9 @@ requires-python = ">=3.12"
 dependencies = []
 
 [dependency-groups]
-dev = []
+dev = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+    "lefthook>=1.13.1",
+    "mypy>=1.18.1",
+]
