--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -1,66 +1,67 @@
 pre-commit:
   parallel: true
   jobs:
-    - name: ruff daemon
+    - name: daemon ruff
       glob: "guardian_daemon/**/*.py"
       run: uv run --package guardian_daemon ruff check --fix {staged_files}
       stage_fixed: true
-    - name: black daemon
+    - name: daemon black
       glob: "guardian_daemon/**/*.py"
       run: uv run --package guardian_daemon black {staged_files}
       stage_fixed: true
-    - name: mypy daemon
+    - name: daemon mypy
       glob: "guardian_daemon/**/*.py"
       run: pushd guardian_daemon ; uv run --active mypy --install-types --explicit-package-bases . ; popd
-    - name: isort daemon
+    - name: daemon isort
       glob: "guardian_daemon/**/*.py"
       run: uv run --package guardian_daemon isort {staged_files}
       stage_fixed: true
-    - name: ruff ctl
+    - name: ctl ruff
       glob: "guardianctl/**/*.py"
       run: uv run --package guardianctl ruff check --fix {staged_files}
       stage_fixed: true
-    - name: black ctl
+    - name: ctl black
       glob: "guardianctl/**/*.py"
       run: uv run --package guardianctl black {staged_files}
       stage_fixed: true
-    - name: mypy ctl
+    - name: ctl mypy
       glob: "guardianctl/**/*.py"
       run: pushd guardianctl ; uv run --active mypy --install-types --explicit-package-bases . ; popd
-    - name: isort ctl
+    - name: ctl isort
       glob: "guardianctl/**/*.py"
       run: uv run --package guardianctl isort {staged_files}
       stage_fixed: true
-    - name: ruff agent
+    - name: agent ruff
       glob: "guardian_agent/**/*.py"
       run: uv run --package guardian_agent ruff check --fix {staged_files}
       stage_fixed: true
-    - name: black agent
+    - name: agent black
       glob: "guardian_agent/**/*.py"
       run: uv run --package guardian_agent black {staged_files}
       stage_fixed: true
-    - name: mypy agent
+    - name: agent mypy
       glob: "guardian_agent/**/*.py"
       run: pushd guardian_agent ; uv run --active mypy --install-types --explicit-package-bases . ; popd
-    - name: isort agent
+    - name: agent isort
       glob: "guardian_agent/**/*.py"
       run: uv run --package guardian_agent isort {staged_files}
       stage_fixed: true
-    - name: ruff hub
+    - name: hub ruff
       glob: "guardian_hub/**/*.py"
       run: uv run --package guardian_hub ruff check --fix {staged_files}
       stage_fixed: true
-    - name: black hub
+    - name: hub black
       glob: "guardian_hub/**/*.py"
       run: uv run --package guardian_hub black {staged_files}
       stage_fixed: true
-    - name: mypy hub
+    - name: hub mypy
       glob: "guardian_hub/**/*.py"
       run: pushd guardian_hub ; uv run --active mypy --install-types --explicit-package-bases . ; popd
-    - name: isort hub
+    - name: hub isort
       glob: "guardian_hub/**/*.py"
       run: uv run --package guardian_hub isort {staged_files}
       stage_fixed: true
     - name: markdownlint
       glob: "*.md"
-      run: markdownlint {staged_files}
+      run: markdownlint-cli2 --fix {staged_files}
+      stage_fixed: true
