--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ ignore_missing_imports = false
 follow_imports = "normal"
 namespace_packages = true
 mypy_path = "guardian_daemon"
+exclude = "(^|/)__init__\\.py$"
 
 [[tool.mypy.overrides]]
 module = ["untyped_package.*"]
@@ -19,7 +20,7 @@ follow_untyped_imports = true
 
 [tool.uv.workspace]
 members = ["*/"]
-exclude = ["scripts", "docs"]
+exclude = ["scripts", "docs", "tests"]
 
 [dependency-groups]
 dev = [
@@ -27,5 +28,6 @@ dev = [
     "isort>=6.0.1",
     "lefthook>=1.13.1",
     "mypy>=1.18.2",
+    "pytest>=8.4.2",
     "ruff>=0.13.1",
 ]
