--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -9,9 +9,9 @@ pre-commit:
       glob: "guardian_daemon/**/*.py"
       run: uv run --package guardian_daemon black {staged_files}
       stage_fixed: true
-    - name: daemon mypy
-      glob: "guardian_daemon/**/*.py"
-      run: pushd guardian_daemon ; uv run --active mypy --install-types --explicit-package-bases . ; popd
+    # - name: daemon mypy
+    #   glob: "guardian_daemon/**/*.py"
+    #   run: pushd guardian_daemon ; uv run --active mypy --install-types --explicit-package-bases . ; popd
     - name: daemon isort
       glob: "guardian_daemon/**/*.py"
       run: uv run --package guardian_daemon isort {staged_files}
@@ -24,9 +24,9 @@ pre-commit:
       glob: "guardianctl/**/*.py"
       run: uv run --package guardianctl black {staged_files}
       stage_fixed: true
-    - name: ctl mypy
-      glob: "guardianctl/**/*.py"
-      run: pushd guardianctl ; uv run --active mypy --install-types --explicit-package-bases . ; popd
+    # - name: ctl mypy
+    #   glob: "guardianctl/**/*.py"
+    #   run: pushd guardianctl ; uv run --active mypy --install-types --explicit-package-bases . ; popd
     - name: ctl isort
       glob: "guardianctl/**/*.py"
       run: uv run --package guardianctl isort {staged_files}
@@ -39,9 +39,9 @@ pre-commit:
       glob: "guardian_agent/**/*.py"
       run: uv run --package guardian_agent black {staged_files}
       stage_fixed: true
-    - name: agent mypy
-      glob: "guardian_agent/**/*.py"
-      run: pushd guardian_agent ; uv run --active mypy --install-types --explicit-package-bases . ; popd
+    # - name: agent mypy
+    #   glob: "guardian_agent/**/*.py"
+    #   run: pushd guardian_agent ; uv run --active mypy --install-types --explicit-package-bases . ; popd
     - name: agent isort
       glob: "guardian_agent/**/*.py"
       run: uv run --package guardian_agent isort {staged_files}
@@ -54,9 +54,9 @@ pre-commit:
       glob: "guardian_hub/**/*.py"
       run: uv run --package guardian_hub black {staged_files}
       stage_fixed: true
-    - name: hub mypy
-      glob: "guardian_hub/**/*.py"
-      run: pushd guardian_hub ; uv run --active mypy --install-types --explicit-package-bases . ; popd
+    # - name: hub mypy
+    #   glob: "guardian_hub/**/*.py"
+    #   run: pushd guardian_hub ; uv run --active mypy --install-types --explicit-package-bases . ; popd
     - name: hub isort
       glob: "guardian_hub/**/*.py"
       run: uv run --package guardian_hub isort {staged_files}
