--- a/guardian_agent/pyproject.toml
+++ b/guardian_agent/pyproject.toml
@@ -8,4 +8,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dbus-next>=0.2.3",
+    "psutil>=7.1.0",
+    "pyyaml>=6.0.2",
+    "structlog>=25.4.0",
+    "types-psutil>=7.0.0.20250822",
+]
+
+[dependency-groups]
+dev = [
+    "types-psutil>=7.0.0.20250822",
 ]
