--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dbus-next>=0.2.3",
     "pyyaml>=6.0.2",
+    "structlog>=25.4.0",
 ]
 
 [dependency-groups]
