--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-_site
-*.egg-info
 __pycache__
-.venv
-*.pyc
-*.pyo
-*.pyd
-.Python
-.idea
-.vscode
+_site
 .DS_Store
-*.log
-*.sqlite3
-docs/_build
+.idea
 .mypy_cache
-config.yaml
-*.sqlite
+.Python
 .test
+.venv
+.vscode
+*.egg-info
+*.log
+*.old
+*.pyc
+*.pyd
+*.pyo
+*.sqlite
+*.sqlite3
+config.yaml
+docs/_build
