--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -16,6 +16,26 @@ dependencies = [
 dev = [
     "pip>=25.2",
     "types-pyyaml>=6.0.12.20250915",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=0.23.5",
+    "pytest-mock>=3.12.0",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.4.3",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=0.23.5",
+    "pytest-mock>=3.12.0",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.4.3",
+]
+
+[tool.pytest.ini_options]
+minversion = "8.4"
+addopts = "-v --tb=short --cov=guardian_daemon --cov-report=html"
+testpaths = ["tests"]
+pythonpath = ["."]
 
 
