--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "dbus-next>=0.2.3",
     "pyyaml>=6.0.2",
     "structlog>=25.4.0",
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.12.0",
 ]
 
 [dependency-groups]
