--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -34,6 +34,14 @@ test = [
     "coverage>=7.4.3",
 ]
 
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["guardian_daemon*"]
+exclude = ["tests*", "alembic*"]
+
 [tool.pytest.ini_options]
 minversion = "8.4"
 addopts = "-v --tb=short --cov=guardian_daemon --cov-report=html"
