--- a/guardian_agent/pyproject.toml
+++ b/guardian_agent/pyproject.toml
@@ -17,4 +17,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "types-psutil>=7.0.0.20250822",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=0.23.5",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.4.3",
 ]
