--- a/guardian_hub/pyproject.toml
+++ b/guardian_hub/pyproject.toml
@@ -7,3 +7,11 @@ license = "MIT"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=0.23.5",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.4.3",
+]
