--- a/guardianctl/pyproject.toml
+++ b/guardianctl/pyproject.toml
@@ -10,3 +10,10 @@ dependencies = [
     "typer>=0.17.4",
     "pyyaml>=6.0.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.4.3",
+]
