Fix all test failures and improve database concurrency
Test fixes:
- Remove obsolete UserManager mocking from enforcer tests
- Fix enforcer test time units (use minutes consistently throughout codebase)
- Fix IPC authentication test mock (use Mock instead of AsyncMockfor get_extra_info)

Database improvements:
- Switch from StaticPool to NullPool for proper concurrent thread safety
- Fix SQLAlchemy 2.0 compatibility: wrap PRAGMA statements with text()
- Remove duplicate get_open_sessions() and get_sessions_count_since() definitions

SQLAlchemy compatibility note:
- Disabled ruff E711 rule (comparison to None) for this project
- SQLAlchemy requires '== None' syntax, not 'is None'
- Using 'is None' with or_() clauses causes query failures
- SQLAlchemy properly translates '== None' to 'IS NULL' in generated SQL

All 77 tests now pass with 35% code coverage.

--- a/guardian_daemon/pyproject.toml
+++ b/guardian_daemon/pyproject.toml
@@ -48,4 +48,9 @@ addopts = "-v --tb=short --cov=guardian_daemon --cov-report=html"
 testpaths = ["tests"]
 pythonpath = ["."]
 
+[tool.ruff]
+# SQLAlchemy requires '== None' for proper SQL generation (translates to IS NULL)
+# Using 'is None' in or_() clauses causes query failures
+lint.ignore = ["E711"]
+
 
