--- a/guardian_daemon/alembic.ini
+++ b/guardian_daemon/alembic.ini
@@ -58,7 +58,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///%(DB_PATH)s
+# Database URL - overridden by env.py at runtime
+sqlalchemy.url = sqlite:///guardian.db
 
 
 [post_write_hooks]
